--- a/passgen/MainWindow.xaml
+++ b/passgen/MainWindow.xaml
@@ -15,6 +15,7 @@
                 <MenuItem Header="_Close" Click="MenuItem_CloseClick"/>
             </MenuItem>
             <MenuItem Header="_Info">
+                <MenuItem Header="_Version" />
                 <MenuItem Header="_Author" />
             </MenuItem>
         </Menu>
